--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <base href="%PUBLIC_URL%/manifest.json" /> <!-- Add this line -->
+    <base href="%PUBLIC_URL%/manifest.json" /> 
 
     <title>Nishit's Portfolio</title>
   </head>
