--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./Screenshot 2023-09-02 at 11.04.38 PM.png" />
+    <link rel="icon" href="%PUBLIC_URL%/Screenshot 2023-09-02 at 11.04.38 PM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
